--- a/src/project.config.json
+++ b/src/project.config.json
@@ -14,7 +14,7 @@
 		"checkInvalidKey": true
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.7.0",
+	"libVersion": "2.7.4",
 	"appid": "wx331193dfb8cd1166",
 	"projectname": "%E5%8C%BA%E5%8C%BA%E8%B4%AD%E5%95%86%E6%88%B7%E7%AB%AF",
 	"debugOptions": {
@@ -32,13 +32,24 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 0,
+			"list": [
+				{
+					"id": -1,
+					"name": "个人中心",
+					"pathName": "pages/profile/index",
+					"scene": null
+				}
+			]
 		}
 	}
 }
