--- a/src/app.json
+++ b/src/app.json
@@ -12,7 +12,8 @@
     "pages/dotAdd/index",
     "pages/dotAdd/search",
     "pages/dotAdd/select",
-    "pages/editor/editor"
+    "pages/editor/editor",
+    "pages/orderManage/index"
   ],
   "permission": {
     "scope.userLocation": {
