--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
-    "easysass.formats": [
-        {
-            "format": "expanded",  // 没有缩进的、扩展的css代码
-            "extension": ".wxss"  //转化的后缀名
-        },
-    ]
+  // "easysass.formats": [
+  //   {
+  //     "format": "expanded", // 没有缩进的、扩展的css代码
+  //     "extension": ".wxss" //转化的后缀名
+  //   }
+  // ]
 }
