--- a/src/project.config.json
+++ b/src/project.config.json
@@ -4,14 +4,23 @@
 		"ignore": []
 	},
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
 		"newFeature": true,
+		"coverView": true,
 		"nodeModules": true,
 		"autoAudits": false,
-		"checkInvalidKey": true
+		"uglifyFileName": true,
+		"checkInvalidKey": true,
+		"checkSiteMap": true,
+		"uploadWithSourceMap": true,
+		"babelSetting": {
+			"ignore": [],
+			"disablePlugins": [],
+			"outputPath": ""
+		}
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.8.3",
@@ -41,7 +50,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 7,
+			"current": 8,
 			"list": [
 				{
 					"id": -1,
@@ -97,6 +106,12 @@
 					"name": "categoryManage",
 					"pathName": "pages/categoryManage/index",
 					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "tagManage",
+					"pathName": "pages/tagManage/index",
 					"scene": null
 				}
 			]
