--- a/src/project.config.json
+++ b/src/project.config.json
@@ -50,7 +50,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 10,
+			"current": 14,
 			"list": [
 				{
 					"id": -1,
@@ -126,6 +126,34 @@
 					"id": -1,
 					"name": "pages/applyMerchant/index",
 					"pathName": "pages/applyMerchant/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/systemManage/index",
+					"pathName": "pages/systemManage/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/systemManage/banner/index",
+					"pathName": "pages/systemManage/banner/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/systemManage/homeModuleConfig/index",
+					"pathName": "pages/systemManage/homeModuleConfig/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/systemManage/productCategory/index",
+					"pathName": "pages/systemManage/productCategory/index",
 					"scene": null
 				}
 			]
