--- a/src/project.config.json
+++ b/src/project.config.json
@@ -24,7 +24,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.8.3",
-	"appid": "wx331193dfb8cd1166",
+	"appid": "wxd3f1f862f22ae9e1",
 	"projectname": "%E5%8C%BA%E5%8C%BA%E8%B4%AD%E5%95%86%E6%88%B7%E7%AB%AF",
 	"debugOptions": {
 		"hidedInDevtools": []
