--- a/src/app.json
+++ b/src/app.json
@@ -14,6 +14,7 @@
     "pages/dotAdd/select",
     "pages/editor/editor",
     "pages/orderManage/index",
+    "pages/orderSearch/index",
     "pages/orderDetail/index",
     "pages/categoryManage/index",
     "pages/tagManage/index",
