--- a/src/app.json
+++ b/src/app.json
@@ -25,6 +25,7 @@
     "pages/systemManage/banner/index",
     "pages/systemManage/homeModuleConfig/index",
     "pages/systemManage/productCategory/index",
+    "pages/systemManage/hotSearch/index",
     "pages/material/index",
     "pages/materialDetail/index"
   ],
